--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarder Junaid Ahmed - Data Scientist Portfolio</title>
+    <title>Sarder Junaid Ahmed - Data Scientist & ML Research Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -492,7 +492,7 @@
                 </div>
                 <div class="profile-info">
                     <h1>Sarder Junaid Ahmed</h1>
-                    <div class="title">Data Scientist & ML Engineer</div>
+                    <div class="title">Data Scientist & ML Researcher</div>
                     <div class="contact-info">
                         <a href="tel:+8801718200525" class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -502,13 +502,17 @@
                             <i class="fas fa-envelope"></i>
                             junaidahmedrupok@gmail.com
                         </a>
-                        <a href="https://www.linkedin.com/in/junaid-ahmed-rupok-059b68240/" class="contact-item" target="_blank">
-                            <i class="fab fa-linkedin"></i>
-                            LinkedIn
+                        <a href="https://github.com/Junaid-Ahmed-Rupok" class="contact-item" target="_blank">
+                            <i class="fab fa-github"></i>
+                            GitHub
+                        </a>
+                        <a href="https://junaid-ahmed-rupok.github.io" class="contact-item" target="_blank">
+                            <i class="fas fa-globe"></i>
+                            Website
                         </a>
                         <span class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            Mirpur, Dhaka, Bangladesh
+                            Dhaka, Bangladesh
                         </span>
                     </div>
                 </div>
@@ -516,9 +520,46 @@
         </header>
 
         <section class="section">
-            <h2><i class="fas fa-bullseye"></i> Career Objective</h2>
+            <h2><i class="fas fa-bullseye"></i> Research Interests</h2>
             <div class="objective">
-                Computer Science graduate with expertise in machine learning algorithms, advanced statistical testing, and data analysis. Proficient in implementing parametric/non-parametric tests, hypothesis testing, and ML model development. Seeking to contribute to AI/ML projects with strong technical skills in Python, statistical validation, and research methodology.
+                Probability theory, combinatorics, Bayesian statistics, statistical computing, causal inference, and robust machine learning; applications in political data science, predictive modeling, and algorithmic statistical testing.
+            </div>
+        </section>
+
+        <section class="section">
+            <h2><i class="fas fa-scroll"></i> Publications</h2>
+            
+            <div class="research-item">
+                <div class="research-status">Submitted for Peer Review</div>
+                <h3>"Multi-Dimensional Statistical Similarity for Governance Classification: Beyond Arbitrary Thresholds in Comparative Politics"</h3>
+                <p style="color: #666; margin-bottom: 15px;"><strong>Ahmed, S.J.</strong> (2025)</p>
+                <ul class="research-highlights">
+                    <li>Novel statistical framework for political regime comparison using multi-dimensional similarity measures</li>
+                    <li>Advanced beyond traditional binary classification approaches in comparative politics</li>
+                    <li>Theoretical contribution to algorithmic statistical testing methodology</li>
+                </ul>
+            </div>
+
+            <div class="research-item">
+                <div class="research-status">Submitted for Peer Review</div>
+                <h3>"Enhanced Crime Classification Using Ensemble Learning: Improving Predictive Accuracy for Law Enforcement Applications"</h3>
+                <p style="color: #666; margin-bottom: 15px;"><strong>Ahmed, S.J.</strong> (2025)</p>
+                <ul class="research-highlights">
+                    <li>Ensemble machine learning approach for crime type classification</li>
+                    <li>Applications in predictive policing and law enforcement optimization</li>
+                    <li>Statistical validation using advanced hypothesis testing methods</li>
+                </ul>
+            </div>
+
+            <div class="research-item">
+                <div class="research-status">Submitted for Peer Review</div>
+                <h3>"Machine Learning-Based Classification of Economic Development Status: A Comparative Study Using World Bank Indicators"</h3>
+                <p style="color: #666; margin-bottom: 15px;"><strong>Ahmed, S.J.</strong> & Kwoshik, M.H.R. (2025)</p>
+                <ul class="research-highlights">
+                    <li>Comparative analysis of ML algorithms for economic development classification</li>
+                    <li>Comprehensive evaluation using World Bank development indicators</li>
+                    <li>Statistical significance testing and model validation methodology</li>
+                </ul>
             </div>
         </section>
 
@@ -534,32 +575,32 @@
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3><i class="fas fa-brain"></i> ML Frameworks</h3>
+                    <h3><i class="fas fa-calculator"></i> Statistical Modeling</h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">Scikit-learn</span>
+                        <span class="skill-tag">Probability Theory</span>
+                        <span class="skill-tag">Bayesian Inference</span>
+                        <span class="skill-tag">Hypothesis Testing</span>
+                        <span class="skill-tag">Mann-Whitney U</span>
+                        <span class="skill-tag">Kolmogorov-Smirnov</span>
+                        <span class="skill-tag">Shapiro-Wilk</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3><i class="fas fa-brain"></i> Machine Learning</h3>
+                    <div class="skill-tags">
                         <span class="skill-tag">TensorFlow</span>
-                        <span class="skill-tag">PyTorch</span>
+                        <span class="skill-tag">Scikit-learn</span>
                         <span class="skill-tag">XGBoost</span>
+                        <span class="skill-tag">Ensemble Methods</span>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3><i class="fas fa-calculator"></i> Mathematics</h3>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Calculus</span>
-                        <span class="skill-tag">Probability</span>
-                        <span class="skill-tag">Statistics</span>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3><i class="fas fa-book-open"></i> Python Libraries</h3>
+                    <h3><i class="fas fa-book-open"></i> Data Science Libraries</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Pandas</span>
                         <span class="skill-tag">NumPy</span>
-                        <span class="skill-tag">SciPy</span>
                         <span class="skill-tag">Matplotlib</span>
                         <span class="skill-tag">Seaborn</span>
-                        <span class="skill-tag">OpenCV</span>
-                        <span class="skill-tag">OS</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -569,78 +610,70 @@
                         <span class="skill-tag">PyCharm</span>
                         <span class="skill-tag">Google Colab</span>
                         <span class="skill-tag">Flask</span>
-                        <span class="skill-tag">Streamlit</span>
-                        <span class="skill-tag">Git</span>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3><i class="fas fa-chart-line"></i> Statistical Analysis</h3>
-                    <div class="skill-tags">
-                        <span class="skill-tag">Mann-Whitney U</span>
-                        <span class="skill-tag">Kolmogorov-Smirnov</span>
-                        <span class="skill-tag">Shapiro-Wilk</span>
-                        <span class="skill-tag">Levene's Test</span>
+                        <span class="skill-tag">Git/GitHub</span>
+                        <span class="skill-tag">Linux</span>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="section">
-            <h2><i class="fas fa-project-diagram"></i> Machine Learning Projects</h2>
+            <h2><i class="fas fa-project-diagram"></i> Research Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
                         <div>
                             <h3>Human Development Index Prediction</h3>
-                            <div class="project-type">Regression Analysis</div>
+                            <div class="project-type">Deep Learning Pipeline</div>
                         </div>
                         <div class="project-year">2025</div>
                     </div>
-                    <div class="project-accuracy">85% Accuracy</div>
+                    <div class="project-accuracy">85% Accuracy | 15% Improvement</div>
                     <ul class="project-features">
-                        <li>Created end-to-end ML pipeline for HDI prediction with Flask API deployment</li>
-                        <li>Achieved 15% improvement in prediction accuracy compared to baseline models</li>
-                        <li>Enables policy makers to forecast development outcomes for strategic planning</li>
+                        <li>End-to-end deep learning pipeline with statistical validation for HDI forecasting</li>
+                        <li>Technologies: Python, TensorFlow, Flask</li>
+                        <li>Statistical validation and cross-validation methodology</li>
                     </ul>
-                    <a href="https://github.com/Junaid-Ahmed-Rupok?tab=repositories" class="contact-item" target="_blank">
-                        <i class="fab fa-github"></i> View on GitHub
+                    <a href="https://github.com/Junaid-Ahmed-Rupok/Living-standard" class="contact-item" target="_blank">
+                        <i class="fab fa-github"></i> View Repository
                     </a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-header">
                         <div>
-                            <h3>Government Type Classification</h3>
-                            <div class="project-type">ML Classification</div>
+                            <h3>Ensemble Methods for Government Classification</h3>
+                            <div class="project-type">Statistical ML Analysis</div>
                         </div>
                         <div class="project-year">2025</div>
                     </div>
-                    <div class="project-accuracy">84% Accuracy</div>
+                    <div class="project-accuracy">84% Accuracy | 12% Improvement</div>
                     <ul class="project-features">
-                        <li>Developed comprehensive ML pipeline for government type prediction with Flask API</li>
-                        <li>Provides 12% higher accuracy in political regime classification than traditional methods</li>
-                        <li>Supports comparative governance research and political stability analysis</li>
+                        <li>Random Forest and Lasso Logistic Regression ensemble</li>
+                        <li>Advanced feature selection and cross-validation</li>
+                        <li>Statistical significance testing on classification results</li>
                     </ul>
-                    <a href="https://github.com/Junaid-Ahmed-Rupok?tab=repositories" class="contact-item" target="_blank">
-                        <i class="fab fa-github"></i> View on GitHub
+                    <a href="https://github.com/Junaid-Ahmed-Rupok/government_Type_ML" class="contact-item" target="_blank">
+                        <i class="fab fa-github"></i> View Repository
                     </a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-header">
                         <div>
-                            <h3>COVID-19 Vaccine Prediction</h3>
-                            <div class="project-type">Healthcare Analytics</div>
+                            <h3>COVID-19 Vaccine Distribution Analytics</h3>
+                            <div class="project-type">Predictive Modeling</div>
                         </div>
                         <div class="project-year">2025</div>
                     </div>
+                    <div class="project-accuracy">20% Efficiency Improvement</div>
                     <ul class="project-features">
-                        <li>Built predictive ML pipeline for vaccine distribution patterns with Flask API integration</li>
-                        <li>Improved vaccination planning efficiency by 20% through data-driven insights</li>
-                        <li>Assists public health authorities in optimizing vaccine allocation strategies</li>
+                        <li>Predictive analytics framework for optimal vaccine allocation</li>
+                        <li>Multi-source data integration with theoretical validation</li>
+                        <li>Statistical modeling for public health decision support</li>
                     </ul>
-                    <a href="https://github.com/Junaid-Ahmed-Rupok?tab=repositories" class="contact-item" target="_blank">
-                        <i class="fab fa-github"></i> View on GitHub
+                    <a href="https://github.com/Junaid-Ahmed-Rupok/corona_vaccine_prediction" class="contact-item" target="_blank">
+                        <i class="fab fa-github"></i> View Repository
                     </a>
                 </div>
             </div>
@@ -653,7 +686,11 @@
                     <div>
                         <h3>Bachelor of Science in Computer Science and Engineering</h3>
                         <p style="color: #666; margin-top: 5px;">Rajshahi University of Engineering and Technology (RUET)</p>
-                        <p style="color: #666;">Rajshahi, Bangladesh</p>
+                        <p style="color: #666;">Rajshahi, Bangladesh | CGPA: 3.08/4.00</p>
+                        <p style="color: #888; font-size: 0.9em; margin-top: 8px;">
+                            <strong>Relevant Coursework:</strong> Machine Learning, Statistical Learning Theory, 
+                            Probability and Combinatorics, Advanced Statistics, Data Structures & Algorithms
+                        </p>
                     </div>
                     <div class="education-year">2019–2025</div>
                 </div>
@@ -661,68 +698,24 @@
         </section>
 
         <section class="section">
-            <h2><i class="fas fa-flask"></i> Research Publications</h2>
-            
-            <div class="research-item">
-                <div class="research-status">Under Review</div>
-                <h3>"Algorithmic Statistical Testing for Regime Comparison: Applications in Political Data Science"</h3>
-                <p style="color: #666; margin-bottom: 15px;">SJ Ahmed (2025)</p>
-                <ul class="research-highlights">
-                    <li>Developed statistical framework analyzing 35 governance indicators across 15,000 observations</li>
-                    <li>Applied Mann-Whitney U, Welch's t-test, Kolmogorov-Smirnov, Shapiro-Wilk, and Levene's tests</li>
-                    <li>Identified statistically significant changes in 9 parameters with 88.9% performance differential</li>
-                </ul>
-            </div>
-
-            <div class="research-item">
-                <div class="research-status">Under Review</div>
-                <h3>"Machine Learning Analysis of Political Regime Classification: A Comprehensive Comparative Study"</h3>
-                <p style="color: #666; margin-bottom: 15px;">SJ Ahmed, MHR Kwoshik (2025)</p>
-                <ul class="research-highlights">
-                    <li>Evaluated 5 ML algorithms achieving 94.27% accuracy with Lasso Logistic Regression</li>
-                    <li>Demonstrated 18% improvement in political regime prediction over conventional methods</li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="section">
-            <h2><i class="fas fa-star"></i> Core Competencies</h2>
+            <h2><i class="fas fa-star"></i> Core Research Competencies</h2>
             <div class="competencies-grid">
                 <div class="competency-item">Statistical Analysis</div>
                 <div class="competency-item">Machine Learning</div>
                 <div class="competency-item">Hypothesis Testing</div>
-                <div class="competency-item">Data Preprocessing</div>
-                <div class="competency-item">Python Programming</div>
+                <div class="competency-item">Probability Theory</div>
+                <div class="competency-item">Bayesian Statistics</div>
+                <div class="competency-item">Algorithmic Testing</div>
                 <div class="competency-item">Research Methodology</div>
-                <div class="competency-item">Model Development</div>
                 <div class="competency-item">Academic Writing</div>
             </div>
         </section>
 
-        <section class="section">
-            <h2><i class="fas fa-language"></i> Languages</h2>
-            <div class="languages">
-                <div class="language-item">
-                    <h3>Bengali</h3>
-                    <p style="color: #666;">Native</p>
-                    <p style="color: #888; font-size: 0.9em;">Mother tongue</p>
-                </div>
-                <div class="language-item">
-                    <h3>English</h3>
-                    <p style="color: #666;">Fluent</p>
-                    <p style="color: #888; font-size: 0.9em;">Excellent technical and professional communication</p>
-                </div>
-            </div>
-        </section>
-
         <div class="cv-download">
-            <a href="./Sarder_Junaid_Ahmed_Data_Scientist_CV.pdf" class="download-btn" download="Sarder_Junaid_Ahmed_Data_Scientist_CV.pdf">
+            <a href="./Sarder_Junaid_Ahmed_CV.pdf" class="download-btn" download="Sarder_Junaid_Ahmed_CV.pdf">
                 <i class="fas fa-download"></i>
-                Download CV (PDF)
+                Download Complete CV (PDF)
             </a>
-            <div class="notification" id="downloadMessage" style="display: none;">
-                Make sure the PDF file is in the same folder as this HTML file for the download to work properly.
-            </div>
         </div>
     </div>
 
